# strpatmatch

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  tests.rs
